Added abstract classes for Home and VehicleBody in Core. Also added SocietalLearner to knowledge domain package. Added concrete classes for VehicleHome and Vehicle in Instance module. Broke spawning out of Home and placed it in SocietalLearner and VehicleHomeSocietalLearner by extension.